--- a/prepros.config
+++ b/prepros.config
@@ -931,14 +931,7 @@
       {
         "file": "css/main.css",
         "config": {
-          "tasks": {
-            "autoprefixer": {
-              "enable": false
-            },
-            "minify-css": {
-              "enable": false
-            }
-          }
+          "sourceMap": true
         }
       }
     ]
